[package]
authors = ["Nick Hu <me@nickhu.co.uk>"]
edition = "2024"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "clientmailforward"
description = "Client-side mail fowarding using IMAP IDLE"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
