[package]
authors = ["Nick Hu <me@nickhu.co.uk>"]
edition = "2024"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "clientmailforward"
description = "Client-side mail fowarding using IMAP IDLE"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
async-imap = "0.10.4"
async-native-tls = "0.5.0"
async-std = { version = "1.13.1", features = ["attributes"] }
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.31"
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
